Question and answer section

--- a/index.html
+++ b/index.html
@@ -297,6 +297,92 @@
 
  <!-- portfolio section end here  -->
 
+
+
+
+ <!-- question and answer section start here  -->
+  <section class="px-[5%] lg:py-24 py-8  lg:px-[10%] bg-[#E9E9E9]">
+    <h1 class="font-black leading-tight text-[#212121] text-[28px] lg:text-[40px]  text-center">Frequently Asked Questions (FAQ):</h1>
+    <div class="h-[500px] overflow-scroll space-y-4 mt-8 lg:mt-14">
+
+      <div class="collapse collapse-arrow bg-base-200">
+        <input type="checkbox" name="my-accordion-2"  />
+        <div class="collapse-title text-xl font-medium">What factors should I consider when designing a house?</div>
+        <div class="collapse-content">
+          <p > <i class="fa-solid fa-arrow-right mr-3"></i>Consider your lifestyle needs, budget, the size and shape of the lot, architectural style preferences, and future growth when designing a house.</p>
+        </div>
+      </div>
+      <div class="collapse collapse-arrow bg-base-200">
+        <input type="checkbox" name="my-accordion-2" />
+        <div class="collapse-title text-xl font-medium">How do I choose the right architectural style for my home?</div>
+        <div class="collapse-content">
+          <p > <i class="fa-solid fa-arrow-right mr-3"></i>Choose a style that reflects your personal taste, complements the surrounding area, and fits within your budget and functional requirements.</p>
+        </div>
+      </div>
+      <div class="collapse collapse-arrow bg-base-200">
+        <input type="checkbox" name="my-accordion-2" />
+        <div class="collapse-title text-xl font-medium">How important is floor plan layout in house design?</div>
+        <div class="collapse-content">
+          <p > <i class="fa-solid fa-arrow-right mr-3"></i>The floor plan layout is crucial as it determines the flow of space, how rooms are connected, and how functional the house will be for your daily activities.</p>
+        </div>
+      </div>
+      <div class="collapse collapse-arrow bg-base-200">
+        <input type="checkbox" name="my-accordion-2" />
+        <div class="collapse-title text-xl font-medium">What are some cost-effective design strategies for a new home?</div>
+        <div class="collapse-content">
+          <p > <i class="fa-solid fa-arrow-right mr-3"></i>Opt for a simple floor plan, use energy-efficient materials, focus on natural lighting, and minimize unnecessary square footage to keep costs down.</p>
+        </div>
+      </div>
+      <div class="collapse collapse-arrow bg-base-200">
+        <input type="checkbox" name="my-accordion-2" />
+        <div class="collapse-title text-xl font-medium">How can I make my house design more sustainable?</div>
+        <div class="collapse-content">
+          <p > <i class="fa-solid fa-arrow-right mr-3"></i>Incorporate energy-efficient appliances, use sustainable materials, install solar panels, and design for optimal natural light and ventilation.</p>
+        </div>
+      </div>
+      <div class="collapse collapse-arrow bg-base-200">
+        <input type="checkbox" name="my-accordion-2" />
+        <div class="collapse-title text-xl font-medium">What role does landscaping play in house design?</div>
+        <div class="collapse-content">
+          <p > <i class="fa-solid fa-arrow-right mr-3"></i>Landscaping enhances the aesthetic appeal, provides functional outdoor spaces, and can improve energy efficiency by providing shade and insulation.</p>
+        </div>
+      </div>
+      <div class="collapse collapse-arrow bg-base-200">
+        <input type="checkbox" name="my-accordion-2" />
+        <div class="collapse-title text-xl font-medium">How do I ensure my home design will meet future needs?</div>
+        <div class="collapse-content">
+          <p > <i class="fa-solid fa-arrow-right mr-3"></i>Plan for flexibility, such as adaptable spaces that can serve multiple purposes, and consider future family growth or changing needs as you age.</p>
+        </div>
+      </div>
+      <div class="collapse collapse-arrow bg-base-200">
+        <input type="checkbox" name="my-accordion-2" />
+        <div class="collapse-title text-xl font-medium">Should I hire an architect or can I design my home myself?</div>
+        <div class="collapse-content">
+          <p > <i class="fa-solid fa-arrow-right mr-3"></i>While you can design your home yourself using design software, hiring an architect ensures professional expertise, creativity, and adherence to local building codes.</p>
+        </div>
+      </div>
+      <div class="collapse collapse-arrow bg-base-200">
+        <input type="checkbox" name="my-accordion-2" />
+        <div class="collapse-title text-xl font-medium">What are the benefits of open-concept designs?</div>
+        <div class="collapse-content">
+          <p > <i class="fa-solid fa-arrow-right mr-3"></i>Open-concept designs promote better flow, maximize natural light, create a sense of spaciousness, and enhance social interaction within the home.</p>
+        </div>
+      </div>
+      <div class="collapse collapse-arrow bg-base-200">
+        <input type="checkbox" name="my-accordion-2" />
+        <div class="collapse-title text-xl font-medium">How long does the house design process typically take?</div>
+        <div class="collapse-content">
+          <p > <i class="fa-solid fa-arrow-right mr-3"></i>The design process can take anywhere from a few weeks to several months, depending on the complexity of the design, the size of the house, and the level of customization.</p>
+        </div>
+      </div>
+
+
+
+
+    </div>
+  </section>
+ <!-- question and answer section end here  -->
+
  
     
 </body>
